# thewidgetfactory

./: .gitignore  AUTHORS  ChangeLog  NEWS  autogen.sh  configure.ac  configure.in
po/: twf.pot
src/: Makefile.am  main.c  themes.c  themes.h  twf.glade
